<resources>
    <string name="app_name">K234111EMobile</string>
    <string name="str_clickme">Click me</string>
    <string name="str_welcome">Welcome to K234111E</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="str_login_system">LOGIN SYSTEM</string>
    <string name="str_username">USER NAME</string>
    <string name="str_button_login">Login</string>
    <string name="str_button_exit">Exit</string>
    <string name="str_Password">PASSWORD</string>
    <string name="str_hint_name">Enter your user name</string>
    <string name="str_hint_password">Enter your password</string>
    <string name="str_login_successful">LOGIN SUCCESSFUL!!!!</string>
    <string name="str_login_failed">LOGIN FAILED!!!!</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_m_plus">M+</string>
    <string name="str_m_minus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator">OPEN CALCULATOR</string>
    <string name="str" />
    <string name="str_save_login_info">Save login information</string>
    <string name="str_login_role">LOGIN ROLE</string>
    <string name="str_role_admin">Administrator</string>
    <string name="str_role_employee">Employee</string>
    <string name="str_confirm_exit">Confirm exit</string>
    <string name="str_exit_message">Confirm exit???</string>
    <string name="str_yes_exit">Yes</string>
    <string name="str_no_exit">No</string>
    <string name="str_backspace">backspace</string>
    <string name="str_employee_id">Employee ID</string>
    <string name="str_employee_name">Employee Name</string>
    <string name="str_employee_phone">Phone number</string>
    <string name="str_delete">Delete</string>
    <string name="str_save">Save</string>
    <string name="str_ask_exit">Are you sure you want to exit???</string>

</resources>