<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login_system"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_username"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="admin" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_Password"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="123" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login_role"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_role_admin" />

            <RadioButton
                android:id="@+id/radEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_role_employee" />
        </LinearLayout>
    </RadioGroup>

    <CheckBox
        android:id="@+id/chkSaveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_save_login_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="loginsystem"
            android:text="@string/str_button_login" />

        <Button
            android:id="@+id/btnexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="exitsystem"
            android:text="@string/str_button_exit" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="24sp" />
</LinearLayout>